# erebus

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Jenkinsfile_disabled  Makefile.am  README.md  ReleaseNotes.md  ReleaseNotes_Pre3.0.md  ReleaseNotes_Pre4.0.md  Spectre.pro  autogen.sh  configure.ac  spectre.qrc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
.reuse/: dep5
.tx/: config
LICENSES/: MIT.txt
cmake/: CMakeLists_db5.x.txt  DownloadFile.cmake
doc/: MacOSX-build-instructions-README.md  README.md
m4/: ax_cxx_compile_stdcxx.m4  boost.m4
scripts/: .gitignore  build-boost-for-android.sh  cmake-build-android_arm64.sh  cmake-build-android_armv7.sh  cmake-build-android_x86-64.sh  cmake-build-mac.sh  cmake-build-win-x86.bat  cmake-build-win.bat  cmake-build.sh  cmake-build_x86.sh  createChecksumSummary.sh  createChecksums.sh  genbuild.sh  install_boost_1_67.sh  install_docker_debian.sh  mac-build.sh  mac-deployqt.sh  mac-finalizedmg.sh  updateUIAssets.sh  win-build.bat  win-genbuild.bat  win-wrapper.bat
src/: CMakeLists.txt  Makefile.am  alert.cpp  alert.h  allocators.h  anonymize.cpp  anonymize.h  base58.h  bignum.h  bloom.cpp  bloom.h  build.h.in  chainparams.cpp  chainparams.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h.in  clientversion.h.obsolete  coincontrol.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  currency.h  db.cpp  db.h  eckey.cpp  eckey.h  extkey.cpp  extkey.h  hash.cpp  hash.h  init.cpp  init.h  interface.h  kernel.cpp  kernel.h  key.cpp  (+68 more)
(+224 files in other folders)
